      early 1.7) was renamed/changed: it is now called 'wiki' and defaults to
      False. Example calls:
      _('This will NOT get parsed/formatted by MoinMoin!')
      _('This will be parsed/formatted by MoinMoin!', wiki=True)
      _('This will be used as a left side of percent operator. %s',
        wiki=True, percent=True)

  New Features:
    * new powerful and flexible logging, please see wiki/config/logging/.
    * moin now logs the path from where it loaded its configuration(s)
    * cfg.trusted_auth_methods is a list of auth methods that put an
      authenticated user into the "Trusted" ACL group.
    * new authentication plugin system
    * new session handling system
    * new preferences plugin system, see MoinMoin/userprefs/__init__.py
    * new notification system with an optional jabber notification bot
    * jabber notification support; for more information see:
      http://moinmo.in/MoinMoinTodo/Release_1.7/HelpOnNotification
    * standalone server can now be started via the "moin" script command,
      optionally backgrounding itself. See: moin server standalone --help
    * the diff action now has navigation buttons for prev/next change

  Other changes:
    * cfg.show_login is gone, see code in theme/__init__.py, this affects
      many themes!
    * needs a new userprefs/ plugin directory
    * removed attachments direct serving (cfg.attachments)


Version 1.6.1:
  New features:
    * Improved params for [[target|label|params]]:
      Added accesskey link tag attribute, e.g.: [[target|label|accesskey=1]].
      Additionally to specifying link tag attributes (like class=foo), you can
      now also specify &key=value for getting that into the query string of
      the link URL.
      The "&" character is important, don't forget it or it won't get into the
      query string!
      E.g. for an attachment, you can use:
      [[attachment:foo.pdf|Direct download of foo.pdf|&do=get]]
      E.g. for linking to some specific diff, you can use: