@@ -101,7 +101,7 @@ class Load(ActionBase):
 
     def do_action_finish(self, success):
         if success:
-            url = Page(self.request, self.pagename).url(self.request, relative=False)
+            url = Page(self.request, self.pagename).url(self.request)
             self.request.http_redirect(url)
             self.request.finish()
         else:
