@@ -90,7 +90,7 @@ class NewPage:
             if parent:
                 pagename = "%s/%s" % (parent, pagename)
 
-            url = Page(self.request, pagename).url(self.request, query, relative=False)
+            url = Page(self.request, pagename).url(self.request, query)
             self.request.http_redirect(url)
 
         return ''
