@@ -20,17 +20,17 @@ def execute(pagename, request):
 
     if pagename.endswith(sub_page_name): # sub_sub_page redirects to sub_page
         query = {}
-        url = Page(request, pagename).url(request, query, relative=False)
+        url = Page(request, pagename).url(request, query)
         request.http_redirect(url)
     elif request.user.may.read(newpagename):
         query = {}
-        url = Page(request, newpagename).url(request, query, relative=False)
+        url = Page(request, newpagename).url(request, query)
         test = Page(request, newpagename)
         if test.exists(): # page is defined -> redirect
             request.http_redirect(url)
         elif request.user.may.write(newpagename):  # page will be created from template
             query = {'action': 'edit', 'backto': newpagename, 'template': quoteWikinameURL(sub_page_template)}
-            url = Page(request, newpagename).url(request, query, relative=False)
+            url = Page(request, newpagename).url(request, query)
             request.http_redirect(url)
         else:
             request.theme.add_msg(errormsg, "error")
