@@ -671,8 +671,7 @@ class SearchResults:
         querydict = wikiutil.parseQueryString(self.request.query_string)
         def page_url(n):
             querydict.update({'from': n * hitsPerPage})
-            return self.request.page.url(self.request, querydict,
-                    escape=0, relative=False)
+            return self.request.page.url(self.request, querydict, escape=0)
 
         pages = hitsNum // hitsPerPage
         remainder = hitsNum % hitsPerPage
